--- a/bookStore.css
+++ b/bookStore.css
@@ -1,36 +1,84 @@
+@import url("https://fonts.googleapis.com/css2?family=Lato:wght@400;700;900&display=swap");
+
 * {
   margin: 0;
   padding: 0;
-  box-sizing: border-box;
-}
-
-li {
-  list-style-type: none;
+  font-family: "Lato", sans-serif;
 }
 
 body {
   display: flex;
   flex-direction: column;
+  align-items: center;
   justify-content: center;
-  gap: 20px;
-  margin: 30px 40px;
+  text-align: center;
+  height: 80vh;
+}
+
+h2 {
+  font-weight: 900;
+}
+
+table {
+  border: 3px solid #000;
+  box-shadow: 1px 2px;
+  font-weight: 700;
+  margin-top: 20px;
+}
+
+table:empty {
+  border: none;
+}
+
+.removeBtn {
+  width: 100px;
+  border: 2px solid #000;
+  color: #000;
+  font-weight: 700;
+  font-size: 17px;
+  padding: 5px;
+  box-shadow: 2px 4px;
+}
+
+tr {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 5px;
+  gap: 200px;
+}
+
+tr:nth-child(2n + 1) {
+  background-color: rgba(128, 128, 128, 0.404);
 }
 
 hr {
-  width: 25%;
-  margin-top: 10px;
+  border: 1px solid #000;
+  width: 20%;
+  margin: 30px 0;
 }
 
-button {
-  margin-top: 10px;
-  padding: 0 2px;
+form {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-end;
+  gap: 15px;
+  margin-top: 20px;
 }
 
-#addForm #title {
-  padding-left: 4px;
+input {
+  width: 300px;
+  padding: 5px;
+  font-weight: 900;
+  border: 3px solid #000;
+  box-shadow: 1px 2px;
 }
 
-#addForm #author {
-  margin-top: 10px;
-  padding-left: 4px;
+form > button {
+  width: 50px;
+  border: 2px solid #000;
+  color: #000;
+  font-weight: 900;
+  padding: 3px;
+  box-shadow: 2px 4px;
 }
