--- a/bookStore.css
+++ b/bookStore.css
@@ -7,16 +7,69 @@
 }
 
 body {
+  height: 100vh;
+  position: relative;
+}
+
+header {
   display: flex;
+  justify-content: space-between;
+  padding: 10px;
+  border: 3px solid #000;
+  box-shadow: 1px 2px;
+  margin: 10px 15px;
+}
+
+.logo {
+  font-weight: 900;
+  color: #000;
+  text-decoration: none;
+}
+
+nav > ul {
+  display: flex;
+  list-style-type: none;
+  gap: 25px;
+}
+
+.right-border {
+  border-right: 1px solid #000;
+  padding-right: 25px;
+}
+
+ul > li > a {
+  text-decoration: none;
+  color: #000;
+  font-weight: 900;
+}
+
+.date-time {
+  display: flex;
+  justify-content: flex-end;
+  padding-right: 15px;
+  color: #000;
+  font-weight: 700;
+}
+
+.list,
+.add-new {
+  display: none;
   flex-direction: column;
   align-items: center;
   justify-content: center;
   text-align: center;
-  height: 80vh;
+  padding: 20px 15px;
 }
 
-h2 {
+.list {
+  padding: 20px 15px;
+  display: flex;
+}
+
+h1 {
+  font-size: 50px;
   font-weight: 900;
+  margin: 120px 0 20px 0;
 }
 
 table {
@@ -24,6 +77,7 @@ table {
   box-shadow: 1px 2px;
   font-weight: 700;
   margin-top: 20px;
+  width: 100%;
 }
 
 table:empty {
@@ -62,16 +116,23 @@ form {
   display: flex;
   flex-direction: column;
   align-items: flex-end;
-  gap: 15px;
+  gap: 35px;
   margin-top: 20px;
 }
 
 input {
-  width: 300px;
-  padding: 5px;
+  width: 500px;
+  padding: 10px;
   font-weight: 900;
+  font-size: 20px;
   border: 3px solid #000;
   box-shadow: 1px 2px;
+}
+
+::placeholder {
+  color: #000;
+  font-weight: 900;
+  font-size: 20px;
 }
 
 form > button {
@@ -80,5 +141,58 @@ form > button {
   color: #000;
   font-weight: 900;
   padding: 3px;
+  font-size: 20px;
   box-shadow: 2px 4px;
+}
+
+.contact {
+  text-align: center;
+  display: none;
+  flex-direction: column;
+  align-items: center;
+}
+
+footer > p {
+  color: #000;
+  font-weight: 900;
+}
+
+.contact > p,
+.contact > ul {
+  color: #000;
+  font-weight: 700;
+  font-size: 20px;
+}
+
+.contact-info {
+  margin-top: 30px;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  list-style-type: disc;
+  width: 400px;
+}
+
+footer {
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  text-align: left;
+  padding: 10px;
+  border: 3px solid #000;
+  box-shadow: 1px 2px;
+  margin: 10px 15px;
+}
+
+.display_none {
+  display: none;
+}
+
+.display_block {
+  display: block;
+}
+
+.display_flex {
+  display: flex;
 }
